2011-02-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Get new session id from SAT.

	* include/dmcs/SessionNotification.h: Add type.

2011-02-05  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/testCombination.cpp: Fix or disable testcases.
	* testsuite/testInterfaceRelSat.cpp: Likewise.
	* testsuite/testJoinThread.cpp: Likewise.
	* testsuite/testMessagingGateway.cpp: Likewise.

	* include/network/MessagingGateway.h: Add session id.
	* include/network/ConcurrentMessageDispatcher.h: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* include/network/NeighborThread.h: Likewise.

	* examples/run-opt.sh: Add run support.
	* examples/run-streaming.sh: Likewise.

	* testsuite/testTranslation.cpp: Fix testcase.

	* include/loopformula/CNFLocalLoopFormulaBuilder.h: Merged Luca's loopformula fix.
	* include/loopformula/IMPLocalLoopFormulaBuilder.h: Likewise.
	* include/loopformula/LocalLoopFormulaBuilder.h: Likewise.
	* include/loopformula/LoopFormulaDirector.h: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/loopformula/CNFLocalLoopFormulaBuilder.cpp: Likewise.
	* src/loopformula/LocalLoopFormulaBuilder.cpp: Likewise.

2011-02-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Inform JoinThread of the new session.

	* src/network/JoinThread.cpp: Catch when interrupted.

	* include/network/JoinThread.h: add process().

	* include/dmcs/SessionNotification.h: Add SessionNotification.h
	* include/dmcs/Makefile.am: Likewise.

	* src/network/JoinThread.cpp: Filter out old models.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/ConcurrentMessageDispatcher.h: Back to just sending
	ctx_id and peq_cnt.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* include/network/MessagingGateway.h: Likewise.
